...
class ViewController: UIViewController {
  
  private let selectionService = SelectionService()
  private var compute          = CalculatorCompute()
  private let scheme           = Scheme()
  
  @IBOutlet private weak var display: UILabel!
  @IBOutlet private      var buttonKeyPad: [UIButton]!
  @IBOutlet private weak var buttonSelection: UIButton!
  
  private var userHasUsedDecimal = false
  private var isUserStillTyping  = false
  private let darkButtons        = [1,2,3,4,5,9,13,17]
...
  // ◉ Button action for initiating Selection view controller
  @IBAction private func selectTheme(_ sender: Any) {
    presentSelectionVC()
  }
  
  private func presentSelectionVC() {
    let selectionVC = selectionService.select()
    selectionVC.delegate = self
    selectionVC.strongReference = self
    present(selectionVC, animated: true, completion: nil )
  }

  
...
