...
    "−"  : Operation.BinaryOperation(subtract),
    "×"  : Operation.BinaryOperation(multiply),
    "÷"  : Operation.BinaryOperation(divide),
    "π"  : Operation.Constant(Double.pi),
    "√"  : Operation.UnaryOperation({ $0 < 0 ? 0 : sqrt($0) }),
    "±"  : Operation.UnaryOperation(plusMinus),
    "AC" : Operation.Constant(0),
    "="  : Operation.Equals
  ]
  
  // Sets amass
  mutating func setOperand(operand: Double) {
    amass = operand
...
